calico-enterprise_versioned_docs/version-3.14/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
---
title: Upgrade Calico Enterprise installed with OpenShift
description: Upgrade to a newer version of Calico Enterprise installed with OpenShift.
openshift_manifests_ignore_pullsecret: true
openshift_manifests_ignore_installation_cr: true
---

import OpenshiftManifests from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_openshift-manifests.mdx';

:::note

All upgrades in {{prodname}} are free with a valid license.

:::

## Upgrades paths

You can upgrade your cluster to a maximum of **two releases** from your existing version. For example, if you are on version 3.6, you can upgrade to 3.7, or you can upgrade directly to 3.8. However, you cannot upgrade beyond **two releases**; upgrading from 3.6 to 3.9 (three releases) is not supported.

If you are several versions behind where you want to be, you must go through each group of two releases to get there. For example, if you are on version 3.6, and you want to get to 3.10, you can upgrade to 3.8, then upgrade from 3.8 directly to 3.10.

:::note

Always check the [Release Notes](../../../release-notes/index.mdx) for exceptions; limitations can override the above pattern.

:::

## Prerequisites

Ensure that your {{prodname}} OpenShift cluster is running OpenShift Container Platform
4.8, 4.9 and 4.10, and the {{prodname}} operator version is v1.2.4 or greater.

:::note

You can check if you are running the operator by checking for the existence of the operator namespace
with `oc get ns tigera-operator` or issuing `oc get tigerastatus`; a successful return means your installation is
using the operator.

:::

## Prepare your cluster for the upgrade

During upgrade, the {{prodname}} LogStorage CR is temporarily removed so Elasticsearch can be upgraded. Features
that depend on LogStorage are temporarily unavailable, including dashboards in the Manager UI. Data ingestion is paused
temporarily, but resumes when the LogStorage is up and running again.

To retain data from your current installation (optional), ensure that the currently mounted persistent volumes
have their reclaim policy set to [retain data](https://kubernetes.io/docs/tasks/administer-cluster/change-pv-reclaim-policy/).
Data retention is recommended only for users that have a valid Elasticsearch license. (Trial licenses can be invalidated
during upgrade).

If your cluster has Windows nodes and uses custom TLS certificates for log storage, prior to upgrade, prepare and apply new certificates for [log storage](../../../maintenance/comms/log-storage-tls.mdx) that include the required service DNS names.

For {{prodname}} v3.5 and v3.7, upgrading multi-cluster management setups must include updating all managed and management clusters.

## Download the new manifests

Make a manifests directory.

```bash-plain-text
mkdir manifests
```

<OpenshiftManifests />

# Upgrade from 3.0 or later

:::note

The steps differ based on your cluster type. If you are unsure of your cluster type, look at the field `clusterManagementType` when you run `oc get installation -o yaml` before you proceed.

:::

1. Apply the updated manifests.

   ```bash-plain-text
   oc apply -f manifests/
   ```

1. <OpenShiftPrometheusOperator operation='upgrade' />

1. If your cluster is a management cluster, apply a [ManagementCluster](../../../reference/installation/api.mdx#operator.tigera.io/v1.ManagementCluster)
   CR to your cluster.

   ```bash-plain-text
   oc apply -f - <<EOF
   apiVersion: operator.tigera.io/v1
   kind: ManagementCluster
   metadata:
     name: tigera-secure
   EOF
   ```

1. If your cluster is v3.7 or older, apply a new [Monitor](../../../reference/installation/api.mdx#operator.tigera.io/v1.Monitor)
   CR to your cluster.

   ```bash-plain-text
   oc apply -f - <<EOF
   apiVersion: operator.tigera.io/v1
   kind: Monitor
   metadata:
     name: tigera-secure
   EOF
   ```

1. Wait until the `apiserver` shows a status of `Available`, then proceed to the next section. You can monitor progress with the following command:

   ```bash-plain-text
   watch oc get tigerastatus/apiserver
   ```

1. If your cluster is management or standalone cluster using v3.8 or older, follow these steps:

   a. Install the network policies to secure {{prodname}} component communications with ElasticSearch

   ```bash-plain-text
   kubectl apply -f {{filesUrl}}/manifests/ocp/tigera-policies-es-access.yaml
   ```

   b. Wait until all components of tigerastatus shows a status of `Available`, then proceed to the next section. You can monitor progress with the following

   ```bash-plain-text
   watch kubectl get tigerastatus
   ```

1. Update the network policies.

   a. If your cluster is a managed cluster:

   ```bash-plain-text
   oc apply -f {{filesUrl}}/manifests/ocp/tigera-policies-managed.yaml
   ```

   a. If your cluster is a standalone or management cluster:

   ```bash-plain-text
   oc apply -f {{filesUrl}}/manifests/ocp/tigera-policies.yaml
   ```

1. You can now monitor the upgrade progress with the following command:

   ```bash-plain-text
   watch oc get tigerastatus
   ```

   :::note

   If there are any problems you can use `kubectl get tigerastatus -o yaml` to get more details.

   :::

1. Remove unused policies in your cluster.

   If your cluster is a **managed** cluster, run this command:

   ```bash-plain-text
   kubectl delete -f {{filesUrl}}/manifests/default-tier-policies-managed.yaml
   ```

   For other clusters, run this command:

   ```bash-plain-text
   kubectl delete -f {{filesUrl}}/manifests/default-tier-policies.yaml
   ```
